close if loop. clean. FIX

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
     - GWION_TAG_DIR=./tag
     - GWION_PLUG_DIR=./plug
   matrix:
-    - GW_FLOAT_TYPE=float  SP_BRANCH=dev COVVERAGE=1
+    - GW_FLOAT_TYPE=float  SP_BRANCH=dev COVERAGE=1
     - GW_FLOAT_TYPE=double USE_DOUBLE=1 SP_BRANCH=dev
     - GW_FLOAT_TYPE=float  SP_BRANCH=master SPA_D=0
     - GW_FLOAT_TYPE=double USE_DOUBLE=1 SP_BRANCH=master SPA_D=0
@@ -43,7 +43,7 @@ compiler:
 - gcc
 
 before_install:
-  - if [ $COVERAGE -eq 1 ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then pip install --user cpp-coveralls; fi; fi
+  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then pip install --user cpp-coveralls; fi; fi; fi
 
 before_script:
   - export PATH=$PATH:$PWD/bats/bin:$PWD/bison-3.0.4/src:$PWD/bin:$PATH
@@ -59,4 +59,4 @@ branches:
     - dev
 
 after_success:
-  - if [ $COVERAGE -eq 1 ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then coveralls --exclude bison*--exclude Soundpipe --exclude test --exclude examples --exclude utils --gcov-options '\-lp';fi; fi
+  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then coveralls --exclude bison*--exclude Soundpipe --exclude test --exclude examples --exclude utils --gcov-options '\-lp';fi; fi; fi
