--- a/.travis.yml
+++ b/.travis.yml
@@ -59,4 +59,4 @@ branches:
     - dev
 
 after_success:
-  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then coveralls --exclude bison* --exclude Soundpipe --exclude test --exclude examples --exclude utils --gcov-options '\-lp';fi; fi; fi
+  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then coveralls --exclude bison*/ --exclude Soundpipe --exclude test --exclude examples --exclude utils --gcov-options '\-lp';fi; fi; fi
