--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ env:
     - D_FUNC=dummy_driver
     - ALSA_D=0
     - SOUNDPIPE_D=0
+    - SPA_D=0
+    - SNDFILE_D=0
     - SOUNDPIPE_DATA_DIR=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
     - GWION_DOC_DIR=./doc
