--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,11 @@ env:
 #    - SNDFILE_D=0
     - SOUNDPIPE_DATA_DIR=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
-    - GWION_DOC_DIR=\"./doc\"
-    - GWION_API_DIR=\"./api\"
-    - GWION_TOK_DIR=\"./tok\"
-    - GWION_TAG_DIR=\"./tag\"
-    - GWION_PLUG_DIR=\"./plug\"
+    - GWION_DOC_DIR="./doc"
+    - GWION_API_DIR="./api"
+    - GWION_TOK_DIR="./tok"
+    - GWION_TAG_DIR="./tag"
+    - GWION_PLUG_DIR="./plug"
   matrix:
     - GW_FLOAT_TYPE=float  SP_BRANCH=dev COVERAGE=1
     - GW_FLOAT_TYPE=double USE_DOUBLE=1 SP_BRANCH=dev
