--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ before_script:
 
 script:
   - make && sh util/test.sh
-  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then for a in test/bug/*; do ./gwion test/bug/$a; done;fi ; fi; fi
+  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then for a in test/bug/*; do ./gwion $a; done;fi ; fi; fi
 
 branches:
   - only:
