--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_script:
   - bash util/travis_prepare.sh
 
 script:
-  - make # && sh util/test.sh
+  - make && sh util/test.sh
   - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then for a in test/bug/*; do ./gwion $a; done;fi ; fi; fi
   - ./gwion examples/doc.gw
 
