--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ before_script:
 
 script:
   - make && sh util/test.sh
-  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then for a in test/bug/*; do ./gwion $a; done;fi ; fi; fi
+  - if [ $COVERAGE -eq 1 ]; then if [ $CC = 'gcc' ]; then if [ $TRAVIS_OS_NAME = 'linux' ]; then for a in tests/bug/*; do ./gwion $a; done;fi ; fi; fi
   - ./gwion examples/doc.gw
   - return 0
 
