--- a/.travis.yml
+++ b/.travis.yml
@@ -28,11 +28,11 @@ env:
     - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
     - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
-    - GWION_DOC_DIR='\"doc/\"'
-    - GWION_API_DIR='\"api/\"'
-    - GWION_TOK_DIR='\"tok/\"'
-    - GWION_TAG_DIR='\"tag/\"'
-    - GWION_PLUG_DIR='\"plug/\"'
+    - GWION_DOC_DIR=doc
+    - GWION_API_DIR=api
+    - GWION_TOK_DIR=tok
+    - GWION_TAG_DIR=tag
+    - GWION_PLUG_DIR=plug
   matrix:
     - USE_DOUBLE=1 SP_BRANCH=dev COVERAGE=1
 #    - GW_FLOAT_TYPE=float  SP_BRANCH=dev COVERAGE=1
