--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ before_install:
   - pip install hererocks
   - hererocks lua_install -r^ --"lua=5.2"
   - export PATH=$PATH:$PWD/lua_install/bin
-  - echo !!!!!!!!!!!!!!$TRAVIS_JOB_NUMBER !!!!!!!!!!!!
+  - echo $TRAVIS_JOB_NUMBER
   - [ $TRAVIS_JOB_NUMBER -eq 1 ] && export USE_COVERAGE=1
   - [ $TRAVIS_JOB_NUMBER -eq 1 ] && pip install --user cpp-coveralls; fi; fi; fi
 
