--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,10 @@ env:
     - GWION_API_DIR=api
     - GWION_TOK_DIR=tok
     - GWION_TAG_DIR=tag
-    - GWION_PLUG_DIR=plug
+    - GWION_ADD_DIR=add
   matrix:
     - USE_DOUBLE=1 SP_BRANCH=dev
-    - SP_BRANCH=dev
+    - USE_DOUBLE=0 SP_BRANCH=dev
 
 matrix:
   fast_finish: true
