--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ os:
 addons:
   apt:
     packages:
-#    - lua5.2
+    - lua5.2
     - valgrind
     - libsndfile1
     - libsndfile1-dev
@@ -48,10 +48,10 @@ compiler:
   - gcc
   - clang
 
-before_install:
-  - pip install hererocks
-  - hererocks lua_install -r^ --"lua=5.2"
-  - export PATH=$PATH:$PWD/lua_install/bin
+#before_install:
+#  - pip install hererocks
+#  - hererocks lua_install -r^ --"lua=5.2"
+#  - export PATH=$PATH:$PWD/lua_install/bin
 
 before_script:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1 ]; then export USE_COVERAGE=1; fi
