--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,9 @@
 *.o
-*.so
-*.gcno
-*.gcov
-*.gcda
 gwion
 ast/parser.*
 ast/lexer.*
 config.mk
 include/generated.h
-forUncrustifySources.cfg
-NOTES
-.github-todos
-doc/html
-doc/latex
-NOTES.journal
-cscope.out
+util/generate_header
 ugen/soundpipe.c
 Makefile
