Pre-deploy commit :smile:

--- a/_config.yml
+++ b/_config.yml
@@ -22,3 +22,4 @@ gist:
 exclude: [Gemfile, Gemfile.lock, site.sh, .gitignore, README.md, .help.zsh]
 
 baseurl: https://fennecdjay.github.io/Gwion
+url: https://fennecdjay.github.io/Gwion
