--- a/_config.yml
+++ b/_config.yml
@@ -21,5 +21,5 @@ gist:
 
 exclude: [Gemfile, Gemfile.lock, site.sh, .gitignore, README.md, .help.zsh]
 
-baseurl: https://fennecdjay.github.io/Gwion
-url: https://fennecdjay.github.io/Gwion
+#baseurl: https://fennecdjay.github.io/Gwion
+#url: https://fennecdjay.github.io/Gwion
