Use **float** as default float type, to match soundpipe.

--- a/util/config.template
+++ b/util/config.template
@@ -11,7 +11,7 @@ OPT: soundpipe_inc:::
 #OPT: LDFLAGS :::'-lm -ldl -rdynamic'
 #OPT: memflags  :::off
 
-USE: double:::on
+USE: double:::off
 USE: coverage:::off
 USE: memcheck:::off
 
