Fix travis onfig.

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,12 +22,11 @@ env:
   global:
     - GWION_HAS_DIR=1
     - DEBUG=1
-    - D_FUNC=dummy_driver
+    - D_FUNC=dummy
     - ALSA_D=0
     - SOUNDPIPE_D=0
     - SPA_D=0
     - SNDFILE_D=0
-    - SOUNDPIPE_DATA_DIR=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - SOUNDPIPE_LIB=$TRAVIS_BUILD_DIR/Soundpipe/libsoundpipe.a
     - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
     - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
