--- a/.travis.yml
+++ b/.travis.yml
@@ -27,13 +27,13 @@ env:
     - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
     - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
-    - GWION_DOC_DIR=doc
-    - GWION_API_DIR=api
-    - GWION_TOK_DIR=tok
-    - GWION_TAG_DIR=tag
-    - GWION_ADD_DIR=add
+#    - GWION_DOC_DIR=doc
+#    - GWION_API_DIR=api
+#    - GWION_TOK_DIR=tok
+#    - GWION_TAG_DIR=tag
+#    - GWION_ADD_DIR=add
     - USE_MEMCHECK=1
-
+    - PREFIX=$TRAVIS_BUILD_DIR
   matrix:
     - USE_DOUBLE=1 SP_BRANCH=dev
     - USE_DOUBLE=0 SP_BRANCH=dev
