--- a/.travis.yml
+++ b/.travis.yml
@@ -27,11 +27,11 @@ env:
     - SOUNDPIPE_INC=-I$TRAVIS_BUILD_DIR/Soundpipe/h
     - DATA=$TRAVIS_BUILD_DIR/Soundpipe/modules/data
     - BISON_VERSION=bison-3.0.4
-#    - GWION_DOC_DIR=doc
-#    - GWION_API_DIR=api
-#    - GWION_TOK_DIR=tok
-#    - GWION_TAG_DIR=tag
-#    - GWION_ADD_DIR=add
+    - GWION_DOC_DIR=$TRAVIS_BUILD_DIR/doc
+    - GWION_API_DIR=$TRAVIS_BUILD_DIR/api
+    - GWION_TOK_DIR=$TRAVIS_BUILD_DIR/tok
+    - GWION_TAG_DIR=$TRAVIS_BUILD_DIR/tag
+    - GWION_ADD_DIR=$TRAVIS_BUILD_DIR/add
     - USE_MEMCHECK=1
     - PREFIX=$TRAVIS_BUILD_DIR
   matrix:
