--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,9 @@ env:
     - USE_DOUBLE=0 SP_BRANCH=dev
 
 matrix:
+  include: 
+    - os: osx
+    -env: USE_DOUBLE=0 SP_BRANCH=dev
   fast_finish: true
   allow_failures:
   - os: osx
