--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,8 @@ env:
 matrix:
   include: 
     os: osx
-    env: USE_DOUBLE=0 SP_BRANCH=dev
+    env: USE_DOUBLE=0 SP_BRANCH=dev CC=gcc
+    env: USE_DOUBLE=0 SP_BRANCH=dev CC=clang
   fast_finish: true
   allow_failures:
   - os: osx
@@ -55,6 +56,7 @@ before_script:
 after_success:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1 ]; then bash util/coverage.sh after_success; fi
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.9 ]; then for a in test/bug/*; do echo $a; ./gwion $a; done; fi
+  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.10 ]; then for a in test/bug/*; do echo $a; ./gwion $a; done; fi
 
 git:
   submodules: false
