--- a/.travis.yml
+++ b/.travis.yml
@@ -35,10 +35,10 @@ env:
     - USE_DOUBLE=0 SP_BRANCH=dev
 
 matrix:
-  include: 
-    os: osx
-    compiler: clang
-    env: USE_DOUBLE=0 SP_BRANCH=dev DEBUG_INSTR=on
+#  include: 
+#    os: osx
+#    compiler: clang
+#    env: USE_DOUBLE=0 SP_BRANCH=dev DEBUG_INSTR=on
   fast_finish: true
   allow_failures:
   - os: osx
@@ -57,10 +57,6 @@ before_script:
 
 after_success:
   - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then bash util/lcov_helper.sh; fi
-  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.1  ]; then coveralls-lcov lcov/lcov.info; fi
-  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.9  ]; then for a in tests/bug/*; do echo $a; ./gwion $a; done; fi
-  - if [ $TRAVIS_JOB_NUMBER = ${TRAVIS_BUILD_NUMBER}.10 ]; then for a in tests/bug/*; do echo $a; ./gwion $a; done; fi
 
 git:
   submodules: false
-
