--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Gwion-plug"]
 	path = Gwion-plug
 	url = https://github.com/fennecdjay/Gwion-plug
+[submodule "rpmalloc"]
+	path = rpmalloc
+	url = https://github.com/rampantpixels/rpmalloc.git
