--- a/.travis.yml
+++ b/.travis.yml
@@ -33,9 +33,9 @@ env:
   matrix:
     - USE_DOUBLE=1 SP_BRANCH=dev
     - USE_DOUBLE=0 SP_BRANCH=dev
-    fast_finish: true
-    allow_failures:
-    - os: osx
+    - fast_finish: true
+    - allow_failures:
+      - os: osx
 
 
 
